package command;

public interface ProductCommand {
    void execute();
}
