package model;

public interface Product {

    public String display();
}
