import model.Book;
import java.util.List;

public class Main {

    private static View view = new View();
    public static void main(String[] args) {
        view.start();
    }
}